add simple GetRecommendationForUser
