# services/core/domain/product/model.go
@@ -3,9 +3,10 @@ package product
 import "time"
 
 type Product struct {
-	ProductID int64
-	Name      string
-	Price     float64
+	ProductID  int64
+	Name       string
+	Price      float64
+	CategoryID string
 	// add more fields here
 }
 
@@ -13,5 +14,11 @@ type UserViewHistory struct {
 	ID        string
 	UserID    string
 	ProductID int64
+	ViewAt    time.Time
+}
+
+type SummaryProductView struct {
+	ProductID int64
+	ViewCount int64
 	ViewAt    time.Time
 }
